--- a/pedidosApp/Views/Shared/_Layout.cshtml
+++ b/pedidosApp/Views/Shared/_Layout.cshtml
@@ -38,9 +38,11 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">🔒 Privacy</a>
                         </li>
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
+
     </header>
     <div class="container">
         <main role="main" class="pb-3">
